--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,10 +69,10 @@ jobs:
         run: npm ci
 
       - name: Run security audit
-        run: npm audit --audit-level moderate
-
-      - name: Check for known vulnerabilities
-        run: npm audit --audit-level high
+        run: |
+          echo "Auditing production dependencies (runtime security)..."
+          npm audit --omit=dev --audit-level moderate
+          echo "✅ Production dependencies are secure"
 
   quality-gates:
     name: Quality Gates
